# SWARM

./: .gitignore  README.md  SWARM.md  features.md  pyproject.toml
.claude/: settings.json
.superpowers/brainstorm/1931649-1778219873/content/: agents.html  architecture-approaches.html  builder.html  cli.html  core-protocols.html  (+4 more)
design/: Patterns.md  Patterns_Efficiency.md  Patterns_Speed.md  Swarm_Patterns.md
docs/superpowers/plans/: 2026-05-08-swarm-library-plan.md
docs/superpowers/specs/: 2026-05-08-swarm-library-design.md
swarm/: __init__.py
swarm/agents/: llm_agent.py
swarm/builder/: config.py  dag.py  swarm.py
swarm/cli/: main.py
swarm/core/: errors.py  protocols.py  types.py
swarm/patterns/: __init__.py  adaptive.py  auction.py  blackboard.py  broadcast.py  debate.py  decentralized.py  hierarchical.py  mesh.py  mixture_of_agents.py  parallel.py  reflection.py  sequential.py  speculative.py  tree_of_thoughts.py  variant_judge.py
swarm/providers/: claude.py  litellm.py  ollama.py
tests/: conftest.py  test_integration.py
tests/agents/: test_llm_agent.py
tests/builder/: test_dag.py  test_swarm.py
tests/cli/: test_cli.py
tests/core/: test_protocols.py  test_types.py
tests/patterns/: test_adaptive.py  test_auction.py  test_blackboard.py  test_broadcast.py  test_debate.py  test_decentralized.py  test_hierarchical.py  test_mesh.py  test_mixture_of_agents.py  test_parallel.py  test_reflection.py  test_sequential.py  test_speculative.py  test_tree_of_thoughts.py  test_variant_judge.py
tests/providers/: test_claude.py  test_ollama.py
(+2 files in other folders)
