[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy", "hatchling"]

[project.scripts]
swarm = "swarm.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
